[package]
name = "test-arc"
version = "0.1.0"
authors = ["Christian Perez Llamas <christian.perez@adevinta.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/xi-editor/druid", branch = "master" }